Add Vitest, tests and update site content
Add Vitest and test setup (vitest.config.ts) plus two new unit tests for GitHub/plugin fetchers. Update package.json (test script, vitest devDependency) and package-lock.json to include test/dev deps. Revise site copy across multiple Astro components to emphasize free, community-built plugins, adjust CTAs/links (move GitHub/Discord URLs into src/lib/config), and improve icon accessibility (aria-hidden). Add .gitignore patterns for screenshots and include new wrangler.jsonc and config helper files.

--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "astro dev",
     "build": "astro build",
     "preview": "astro preview",
-    "astro": "astro"
+    "astro": "astro",
+    "test": "vitest run"
   },
   "keywords": [
     "wordpress",
@@ -24,13 +25,17 @@
   },
   "homepage": "https://openwpclub.com",
   "dependencies": {
-    "astro": "^5.17.2",
     "@astrojs/sitemap": "^3.3.1",
+    "@tailwindcss/typography": "^0.5.19",
+    "@tailwindcss/vite": "^4.1.7",
+    "astro": "^5.17.2",
     "marked": "^15.0.7",
-    "tailwindcss": "^4.1.7",
-    "@tailwindcss/vite": "^4.1.7"
+    "tailwindcss": "^4.1.7"
   },
   "engines": {
     "node": ">=18.0.0"
+  },
+  "devDependencies": {
+    "vitest": "^4.0.18"
   }
 }
