--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -1,6 +1,7 @@
 {
-  "name": "open-wp-club-website",
+  "name": "www",
   "compatibility_date": "2026-02-13",
+  "workers_dev": false,
   "assets": {
     "directory": "./dist"
   }
